# ServerApp/API/Controllers/ExerciseController.cs
@@ -6,11 +6,11 @@ using Microsoft.AspNetCore.Mvc;
 
 namespace API.Controllers
 {
+    [Authorize]
     public class ExerciseController : BaseApiController
     {
-        [HttpPost("add")]
-        [Authorize]
-        public async Task<IActionResult> Add([FromBody] CreateExerciseCommand request)
+        [HttpPost("addExercise")]
+        public async Task<IActionResult> AddExercise([FromBody] CreateExerciseCommand request)
         {
             try
             {
@@ -24,8 +24,7 @@ namespace API.Controllers
 
         }
 
-        [HttpGet("getAll")]
-        [Authorize]
+        [HttpGet("getAllExercises")]
         public async Task<ActionResult<List<GetExerciseListItemQuery>>> GetUserExercises()
         {
             try
@@ -39,8 +38,7 @@ namespace API.Controllers
 
         }
 
-        [HttpGet("get/{id}")]
-        [Authorize]
+        [HttpGet("getExercise/{id}")]
         public async Task<ActionResult<GetExerciseQuery>> GetExercise(Guid id)
         {
             try
@@ -54,8 +52,7 @@ namespace API.Controllers
 
         }
 
-        [HttpPut("edit/{id}")]
-        [Authorize]
+        [HttpPut("editExercise/{id}")]
         public async Task<IActionResult> EditExercise(Guid id, EditExerciseCommand editExerciseRequest)
         {
             try
